--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="box">
             <div class="box-1">
-                <img class="cartoon-1" src="/shariq/1.webp" alt="">
+                <img class="cartoon-1" src="./shariq/1.webp" alt="">
                 <h3 class="b1c1">Mentorship Program</h3>
                 <h3 class="b1c2">Learn directly from Expert Traders who make <br> money regularly in the Stock Market.⁤</h3>
                 <button class="button-2" id="view_star_traders" width="311" class="sc-iWOQzb fCZuNY">View our star traders</button>
