--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="top-main">
         <div class="header-left">
-            <a href="https://marketfeed.com/"><img class="logo" src="/shariq/marketfeed.png" alt=""></a>
+            <a href="https://marketfeed.com/"><img class="logo" src="./shariq/marketfeed.png" alt=""></a>
 
         </div>
         <div class="header-right">
