--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             </div>
             <div class="box-2">
-                <img class="cartoon-2" src="/shariq/2.webp" alt="">
+                <img class="cartoon-2" src="./shariq/2.webp" alt="">
                 <h3 class="b2c1">Get Free Trade Ideas</h3>
                 <h3 class="b2c2">Follow India's Top Traders and get all their trade <br> updates for free</h3>
                 <button class="button-3" id="get_marketfeed_app" width="311" class="sc-iWOQzb fCZuNY">Get marketfeed app</button>
@@ -57,8 +57,8 @@
 
         </div>
         <div class="box-3">
-            <img class="shariq" src="/shariq/shariq.webp" id="sharique">
-            <img class="verified" src="/shariq/verified.png" alt="">
+            <img class="shariq" src="./shariq/shariq.webp" id="sharique">
+            <img class="verified" src="./shariq/verified.png" alt="">
             <p class="shariq1" >Sharique</p>
             <p class="shariq2">Samsudheen</p>
             <p class="shariqdes">Pro Option Seller</p>
@@ -73,8 +73,8 @@
 
         </div>
         <div class="box-4">
-            <img class="shiju" src="/shariq/Shijumon_New.webp" id="shijumon">
-            <img class="verified" src="/shariq/verified.png" alt="">
+            <img class="shiju" src="./shariq/Shijumon_New.webp" id="shijumon">
+            <img class="verified" src="./shariq/verified.png" alt="">
             <p class="shariq1" >Shijumon</p>
             <p class="shariq2">Antony</p>
             <p class="shariqdes">Pro Option Buyer</p>
@@ -121,7 +121,7 @@
         </div>
         <div class="last">
             <p class="lc1">made in kerala</p>
-            <img class="copy" src="/shariq/copyright.png" alt="">
+            <img class="copy" src="./shariq/copyright.png" alt="">
             <p class="lc2">fundfolio</p>
 
         </div>
