--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div>
     <div class="footer">
         <div class="footer1">
-            <a href="https://fundfolio.com/"><img  class="fundfolio" src="/shariq/download.png" alt=""></a>
+            <a href="https://fundfolio.com/"><img  class="fundfolio" src="./shariq/download.png" alt=""></a>
             <p class="address">HoneyKomb by Bhive, 3/B, 19th <br> Main Road, HSR Sector 3 <br>
                 Bengaluru, Bengaluru Urban <br>
                 Karnataka, 560102</p>
