--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
     <div class="second-div">
         <div class="content-4">
-            <p class="sm">Stock Market Mentorship</p>
+             <p class="sm">Stock Market <span>Mentorship</span> </p>
             <p class="sm1">Learn stock market trading directly from expert traders. From stock <br> market basics to advanced trading strategies, choose from a wide <br> variety of mentorship programmes to fit your goals.</p>
 
         </div>
